--- a/templates/etc/netplan/config.yaml.j2
+++ b/templates/etc/netplan/config.yaml.j2
@@ -1,4 +1,7 @@
 ---
+{% if netplan_configuration['head_comment'] is defined %}
+# {{ netplan_configuration['netplan_maintained_comment'] }}
+{% endif %}
 network:
   version: {{ netplan_configuration['network']['version']|default('2') }}
 {% if netplan_renderer is not none %}
