Set netplan indentation to 2

--- a/templates/etc/netplan/config.yaml.j2
+++ b/templates/etc/netplan/config.yaml.j2
@@ -9,23 +9,23 @@ network:
 {% endif %}
 {% if netplan_configuration['network']['ethernets'] is defined %}
   ethernets:
-{{ netplan_configuration['network']['ethernets']|to_nice_yaml|indent(4, true) }}
+{{ netplan_configuration['network']['ethernets']|to_nice_yaml(2)|indent(4, true) }}
 {% endif %}
 {% if netplan_configuration['network']['wifis'] is defined %}
   wifis:
-{{ netplan_configuration['network']['wifis']|to_nice_yaml|indent(4, true) }}
+{{ netplan_configuration['network']['wifis']|to_nice_yaml(2)|indent(4, true) }}
 {% endif %}
 {% if netplan_configuration['network']['bonds'] is defined %}
   bonds:
-{{ netplan_configuration['network']['bonds']|to_nice_yaml|indent(4, true) }}
+{{ netplan_configuration['network']['bonds']|to_nice_yaml(2)|indent(4, true) }}
 {% endif %}
 {% if netplan_configuration['network']['bridges'] is defined %}
   bridges:
-{{ netplan_configuration['network']['bridges']|to_nice_yaml|indent(4, true) }}
+{{ netplan_configuration['network']['bridges']|to_nice_yaml(2)|indent(4, true) }}
 {% endif %}
 {% if netplan_configuration['network']['vlans'] is defined %}
   vlans:
-{{ netplan_configuration['network']['vlans']|to_nice_yaml|indent(4, true) }}
+{{ netplan_configuration['network']['vlans']|to_nice_yaml(2)|indent(4, true) }}
 {% endif %}
 {% if netplan_configuration['network']['tunnels'] is defined %}
   tunnels:
